--- a/TeamCores.Web/wwwroot/css/style.css
+++ b/TeamCores.Web/wwwroot/css/style.css
@@ -1442,6 +1442,7 @@ tr.table-row:hover td {
         margin-top: 10px;
         text-align: right;
     }
+
     .dl-label-w100 dt {
         width: -moz-calc(100% - 100px);
         width: -webkit-calc(100% - 100px);
@@ -1451,3 +1452,23 @@ tr.table-row:hover td {
         text-align: left;
         text-indent: 30px;
     }
+
+.info-box {
+    margin-top: 20px;
+}
+
+    .info-box .info-title {
+        height: 30px;
+        line-height: 30px;
+        background-color: #eeeeee;
+    }
+
+
+/*text-indent*/
+.no-indent {
+    text-indent: 0px;
+}
+
+.indent-10 {
+    text-indent: 10px;
+}
