--- a/TeamCores.Web/Views/StudyPlan/Index.cshtml
+++ b/TeamCores.Web/Views/StudyPlan/Index.cshtml
@@ -17,6 +17,8 @@
 
 @section page_script{
 	<script src="~/js/storage.js"></script>
+	<script src="~/js/vue/components/studyplan/plans.js"></script>
+	<script src="~/js/vue/components/studyplan/plans.my.js"></script>
 	<script>
 		var vm = new Vue({
 				el: '#content',
