创建考卷模板（第一步，未完成）

--- a/TeamCores.Web/Views/Exams/Index.cshtml
+++ b/TeamCores.Web/Views/Exams/Index.cshtml
@@ -299,7 +299,7 @@
                  * 跳转到新增页面
                 */
                 goAdd() {
-                    location = '/exam/add';
+                    location = '/exams/add';
                 },
                 /**
                  * 跳转到编辑页面
